# spotifust

./: .gitignore  .lycheeignore  .markdownlint.yaml  .typos.toml  AGENTS.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  TODO.md  build.rs  build_installer.ps1  build_installer.sh  deny.toml  install.sh  testing.ps1  testing.sh
.agents/coding-guidelines/: SKILL.md
.agents/core-actionbook/: SKILL.md
.agents/core-agent-browser/: SKILL.md
.agents/core-dynamic-skills/: SKILL.md
.agents/core-fix-skill-docs/: SKILL.md
.agents/domain-cli/: SKILL.md
.agents/domain-cloud-native/: SKILL.md
.agents/domain-embedded/: SKILL.md
.agents/domain-fintech/: SKILL.md
.agents/domain-iot/: SKILL.md
.agents/domain-ml/: SKILL.md
.agents/domain-web/: SKILL.md
.agents/m01-ownership/: SKILL.md  comparison.md
.agents/m02-resource/: SKILL.md
.agents/m03-mutability/: SKILL.md
.agents/m04-zero-cost/: SKILL.md
.agents/m05-type-driven/: SKILL.md
.agents/m06-error-handling/: SKILL.md
.agents/m07-concurrency/: SKILL.md  comparison.md
.agents/m09-domain/: SKILL.md
.agents/m10-performance/: SKILL.md
.agents/m11-ecosystem/: SKILL.md
.agents/m12-lifecycle/: SKILL.md
.agents/m13-domain-error/: SKILL.md
.agents/m14-mental-model/: SKILL.md
.agents/m15-anti-pattern/: SKILL.md
.agents/meta-cognition-parallel/: SKILL.md
.agents/rust-call-graph/: SKILL.md
.agents/rust-code-navigator/: SKILL.md
.agents/rust-daily/: SKILL.md
.agents/rust-deps-visualizer/: SKILL.md
.agents/rust-learner/: SKILL.md
.agents/rust-refactor-helper/: SKILL.md
.agents/rust-router/: SKILL.md
.agents/rust-skill-creator/: SKILL.md
.agents/rust-symbol-analyzer/: SKILL.md
.agents/rust-trait-explorer/: SKILL.md
.agents/unsafe-checker/: AGENTS.md  SKILL.md
.github/: CODEOWNERS  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml  labels.yml  release-drafter.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  documentation.yml  feature_request.yml  performance.yml
.github/workflows/: build_deb_manual.yml  build_dmg_manual.yml  build_msi_manual.yml  build_targz_manual.yml  build_website.yml  cargo-audit.yml  cargo-deny.yml  ci.yml  codeql.yml  docs.yml  label-sync.yml  links.yml  release-drafter.yml  release.yml  stale.yml  typos.yml
assets/: spotifust.desktop  spotifust.icns
docs/: architecture.md  development.md  release-process.md
installer/: LICENSE.rtf  spotifust.wxs
scripts/: build.ps1  build.sh  test.ps1  test.sh
src/: app.rs  error.rs  main.rs
src/api/: album.rs  artist.rs  auth.rs  cache.rs  mod.rs  playlist.rs  search.rs  tracks.rs  user.rs
src/audio/: engine.rs  mod.rs  session.rs  sink.rs
src/ui/: canvas_view.rs  icons.rs  login.rs  main_layout.rs  mod.rs  theme.rs
(+34 files in other folders)
