[package]
name = "spotifust"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
description = "A native, fast, and light Spotify desktop client"
license = "GPL-3.0-only"

[lints.rust]
unsafe_code = "warn"

[lints.clippy]
all = "warn"
pedantic = "warn"

[dependencies]
iced = { version = "0.14.0", features = ["tiny-skia", "canvas", "tokio", "image"] }
image = "0.25.9"
keyring = "4.1.2"
librespot = { git = "https://github.com/librespot-org/librespot", version = "0.8.0" }
rodio = "0.21.1"
rspotify = { version = "0.16.1", features = ["client-reqwest", "reqwest-rustls-tls"] }
thiserror = "2.0.18"
tokio = { version = "1.52.3", features = ["rt-multi-thread", "macros", "sync", "net"] }
open = "5.1.2"

[build-dependencies]
winres = "0.1.12"
