[package]
name = "spotifust"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
description = "A native, fast, and light Spotify desktop client"
license = "GPL-3.0-only"

[lints.rust]
unsafe_code = "warn"

[lints.clippy]
all = "warn"
pedantic = "warn"

[dependencies]
iced = { version = "0.14.0", default-features = false, features = ["tiny-skia", "canvas", "tokio", "image", "svg", "wayland", "x11", "advanced"] }
image = "0.25.9"
keyring = "4.1.2"
librespot = { git = "https://github.com/librespot-org/librespot", version = "0.8.0" }
rodio = "0.21.1"
rspotify = { version = "0.16.1", features = ["client-reqwest", "reqwest-rustls-tls"] }
futures = "0.3"
thiserror = "2.0.18"
tokio = { version = "1.52.3", features = ["rt-multi-thread", "macros", "sync", "net"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
open = "5.1.2"

[build-dependencies]
winres = "0.1.12"

[package.metadata.deb]
assets = [
    ["target/release/spotifust", "usr/bin/", "755"],
    ["assets/spotifust.desktop", "usr/share/applications/", "644"],
    ["assets/spotifust.png", "usr/share/pixmaps/", "644"]
]

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
panic = "abort"
strip = true
